# CerberusBeacon

./: .env.sample  .gitignore  ARCH.md  CONTRIBUTING.md  DECISION_LOG.md  LICENSE  README.md  SECURITY.md  SPEC.md  THIRD_PARTY_LICENSES.md  cerberus_ctl.py  main.py  pyproject.toml  requirements.txt  telegram_daemon.py
src/: __init__.py  activity.py  agent.py  auth.py  config.py  files.py  i18n.py  macros.py  metrics.py  terminal.py  tunnel.py  web.py
src/bots/: __init__.py  slack_bot.py  telegram_bot.py
src/templates/: main.html  main.js  terminal.js
tests/: __init__.py  conftest.py  test_agent.py  test_auth.py  test_config.py  test_files.py  test_macros.py  test_metrics.py  test_tunnel.py
